# python-template-environment

./: .gitignore  CLAUDE.md  README.md  ReadMe.md  pyproject.toml
.claude/: settings.json
.devcontainer/: .env  Dockerfile.work  devcontainer.json  docker-compose.yml  postCreate.sh
